Page 2 updated for tablet

--- a/index.html
+++ b/index.html
@@ -1287,7 +1287,7 @@
             }
 
             .section-2-img-div{
-                width: 90%;
+                width: 95%;
             }
 
             .section-2-img-div img{
@@ -1330,6 +1330,146 @@
                 height: 7.5vh;
                 font-size:1.5rem;
                 margin: 0 0;
+            }
+
+            /* Page 2 */
+            .p2-section-1{
+                height: auto;
+                padding-bottom: 5vh;
+                padding-top:5vh;
+            } 
+
+            .p2-section-1 h2{
+                font-size: 1.7rem;
+            }
+
+            .p2-section-1-div{
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+            }
+
+            .p2-section-1-title{
+                height: 20%;
+                padding-bottom: 0;
+            }
+
+            .p2-section-1-title h2{
+                font-size:2.3rem;
+            }
+
+            .p2-section-1-text{
+                width: 90%;
+                padding: 2vh;
+            }
+
+            .p2-section-1 img{
+                padding: 3vh 0;
+                width: 100%;
+                height: auto;
+            }
+
+            .p2-section-1-text{
+                width:95%;
+                padding:0;
+            }
+
+            .p2-section-1-text p{
+                font-size: 1.25rem;
+                line-height: 2rem;
+                margin-bottom: 2vh;
+                text-align:justify;
+                text-justify: inter-word;
+                font-family: 'Acumin Pro', sans-serif;
+                padding-right: 0;
+            }
+
+            .p2-section-2-left{
+                display: none;
+            }
+
+            .p2-section-2-right{
+                width:100%
+            }
+
+            .p2-section-2 {
+                background-image: none;
+                height: auto;
+                padding: 0 0 3vh 0vh;
+                background-color: #031e4d;
+            }
+
+            .p2-section-2::before {
+                content: "";
+                display: block;
+                width: 100%;
+                height: auto;
+                background: url('assets/image_7.jpg') no-repeat center;
+                background-size: contain;
+                background-size: 175%;
+                background-position: -10% center;
+                min-height: 45vh;
+            }
+
+            .services-background {
+                background-image: none;
+                background-color: #abcfff;
+            }
+
+            .services-right-side{
+                width:100%
+            }
+
+            .services-left-side{
+                display:none;
+                width:0%
+            }
+
+            .ipo-title{
+                text-align: center;
+                font-size: 3rem;
+                padding-top:1vh;
+            }
+
+            .ipo-description{
+                text-align:justify;
+                width:95%;
+            }
+
+            .services-title{
+                font-size: 3.5rem;
+            }
+
+            .services-content{
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+            }
+
+            .services-list li {
+                font-size: 1.3rem;
+                padding-left: 2.5vw;
+            }
+
+            .services-list {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: start;
+            }
+
+            .call-to-action{
+                display: flex;
+                padding: 0 2vh;
+                align-items: center;
+                justify-content: center;
+                margin-top:5vh;
+            }
+
+            .call-to-action h2{
+                text-align: center;
+                font-size:2rem;
             }
 
         }
