Completed tablet update for all three pages

--- a/index.html
+++ b/index.html
@@ -1472,6 +1472,157 @@
                 font-size:2rem;
             }
 
+            /* Page 3 */
+        
+            .p3-section-1{
+                height: auto;
+                padding: 3vh 0;
+            }
+
+            .p3-section-1-title{
+                width:95%;
+                padding: 3vh 0;
+            }
+
+            .p3-section-1-title h2{
+                font-size: 2.3rem;
+                padding-bottom: 0;
+            }
+
+            .p3-section-1-text{
+                padding: 0;
+                width:90%;
+                padding-top: 3vh;
+            }
+
+            .p3-section-1-div{
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+            }
+
+            .p3-section-2 {
+                flex-direction: column;
+                height: auto;
+                padding: 3vh 5vw; 
+                background-image: none;
+                text-align: center;
+            }
+
+            .section-text{
+                width: 100%;
+                font-size: 2rem;
+                text-align: center;
+                padding:0;
+                text-justify: inter-word; 
+            }
+
+            .text-div-container{
+                width:100%;
+            }
+
+            .p3-section-2::after {
+                content: "";
+                display: block;
+                width: 100%;
+                height: auto;
+                background-image: url('assets/image_10.jpg');
+                background-size: contain;
+                background-size: 200%;
+                background-position: 95% center;
+                background-repeat: no-repeat;
+                min-height: 45vh;
+            }
+
+            .p3-section-1-img{
+                width:90%;
+            }
+
+            .p3-section-1-img img{
+                padding: 0;
+            }
+
+            .p3-section-1-text p{
+                text-align: justify;
+                text-justify: inter-word; 
+                padding: 0 1vw;
+            }
+
+            .p3-section-2{
+                background-size: contain;
+                background-size: 150%;
+                background-position: 75% center;
+                padding: 3vh 0 0 0;
+            }
+
+            .team-member h3{
+                font-size: 1.7rem;
+            }
+
+            .team-role{
+                font-size: 1.4rem;
+            }
+            
+            .bio-content{
+                width: 100%;
+                padding: 2vh 4vw;
+            }
+
+            .bio-content p{
+                text-align: justify;
+                text-justify: inter-word; 
+            }
+
+            .bio-toggle{
+                font-size: 1.4rem;
+                margin-top:1vh;
+            }
+
+            .team-photo {
+                width: 20vw;
+                height: 20vw;
+            }
+
+            .p3-section-4 {
+                background-image: none;
+                height: auto;
+                flex-direction: column;
+                padding: 5vh 5vw;
+            }
+
+            .p3-section-4::before {
+                content: "";
+                display: block;
+                width: 100%;
+                height: auto;
+                background: url('assets/image_11.jpg') no-repeat center;
+                background-size: contain;
+                background-size: 300%;
+                background-position: 15% center;
+                min-height: 45vh;
+            }
+
+            .filler{
+                display: none;
+            }
+
+            .section-4-content {
+                width: 100%;
+                font-size: 1.2em;
+                text-align: center;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                margin-top: 20px;
+            }
+
+            .section-4-content h2{
+                text-align: center;
+            }
+
+            .divider{
+                margin: 4vh 0;
+            }
         }
     </style>
 </head>
