Mobile version completed

--- a/fr.html
+++ b/fr.html
@@ -832,6 +832,7 @@
             }
 
             nav {
+                height: 15vh;
                 padding: 10px;
                 align-items: center;
             }
@@ -902,11 +903,13 @@
             /* Page 1 */
             .section-1{
                 background-size:cover;
+                height: 70vh;
             }
 
             .section-1 h1 {
                 font-size: 3rem;
                 line-height: 1;
+                margin-top: 5vh;
             }
 
             .section-1 h3 {
@@ -918,10 +921,16 @@
                 flex-direction: column;
                 height: auto;
                 padding-bottom: 3vh;
+                padding-top: 3vh;
             }
 
             .section-2 h2{
                 font-size:2.2rem;
+                margin-bottom: 0;
+            }
+
+            .h2-style{
+                margin-bottom: 1vh;
             }
 
             .section-2-img-div{   
@@ -964,7 +973,7 @@
             }
 
             .section-3 .contact-us-div{
-                padding: 10vh 0;
+                padding: 7vh 0;
             }
 
             .button{
@@ -974,18 +983,23 @@
                 margin: 3vh 0;
             }
 
-            .contact-us-title
-            {
-                width:95%;
+            .contact-us-title{
+                display:flex;
+                width:100%;
+                padding-bottom: 0;
+                justify-content: center;
             }
 
             .contact-us-title h2{
-                font-size: 2.3rem;
+                font-size: 2.2rem;
+                width: 95%;
             }
 
             /* Page 2 */
             .p2-section-1{
                 height: auto;
+                padding-top: 5vh;
+                padding-bottom: 3vh;
             } 
 
             .p2-section-1 h2{
@@ -1009,12 +1023,12 @@
 
             .p2-section-1-text{
                 width: 90%;
-                padding: 2vh;
+                padding: 2vh 0;
             }
 
             .p2-section-1 img{
-                padding: 3vh 0;
-                width: 90%;
+                padding: 1vh 0;
+                width: 100%;
                 height: auto;
             }
 
@@ -1025,7 +1039,7 @@
                 text-align:justify;
                 text-justify: inter-word;
                 font-family: 'Acumin Pro', sans-serif;
-                padding-right: 5%;
+                padding-right: 0;
             }
 
             .p2-section-2-left{
@@ -1039,7 +1053,7 @@
             .p2-section-2 {
                 background-image: none;
                 height: auto;
-                padding: 5vh 0vh;
+                padding: 0vh 0vh;
                 background-color: #031e4d;
             }
 
@@ -1050,8 +1064,8 @@
                 height: auto;
                 background: url('assets/image_7.jpg') no-repeat center;
                 background-size: contain;
-                background-size: 175%;
-                background-position: 25% center;
+                background-size: 185%;
+                background-position: 0 center;
                 min-height: 45vh;
             }
 
@@ -1072,11 +1086,11 @@
             .ipo-title{
                 font-size: 2.7rem;
                 text-align: center;
-                padding-top:3vh;
             }
 
             .ipo-description{
                 text-align:justify;
+                padding-bottom: 2vh;
             }
 
             .services-title{
@@ -1107,11 +1121,13 @@
                 padding: 2vh;
                 align-items: center;
                 justify-content: center;
+                margin-top: 0;
             }
 
             .call-to-action h2{
                 text-align: center;
                 font-size:2rem;
+                margin-bottom: 2vh;
             }
 
             /* Page 3 */
@@ -1137,6 +1153,7 @@
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
+                margin-top: 0;
             }
 
             .p3-section-1-img{
@@ -1148,15 +1165,15 @@
             }
 
             .p3-section-1-text{
-                width: 100%;
-                padding: 5vh;
+                width: 90%;
+                padding: 3vh 0;
             }
 
             .p3-section-1-text p{
                 text-align: justify;
                 text-justify: inter-word;
+                padding-right: 0;
                 font-size:1.2rem;
-                padding: 0 1vw;
             }
 
 
@@ -1172,7 +1189,7 @@
                 width: 100%;
                 padding-top:2vh;
                 padding-left: 0;
-                font-size: 1.5rem;
+                font-size: 1.8rem;
                 text-align: center;
             }
 
@@ -1187,10 +1204,14 @@
                 height: auto;
                 background-image: url('assets/image_10.jpg');
                 background-size: contain;
-                background-size: 200%;
-                background-position: 95% center;
+                background-size: 270%;
+                background-position: 87% center;
                 background-repeat: no-repeat;
                 min-height: 45vh;
+            }
+
+            .team-title {
+                padding-top: 3vh;
             }
             
             .bio-content{
@@ -1321,7 +1342,7 @@
             }
 
             .section-2-img-div{
-                width: 95%;
+                width: 100%;
             }
 
             .section-2-img-div img{
@@ -1441,7 +1462,7 @@
                 background: url('assets/image_7.jpg') no-repeat center;
                 background-size: contain;
                 background-size: 175%;
-                background-position: 0% center;
+                background-position: -10% center;
                 min-height: 45vh;
             }
 
