--- a/index.html
+++ b/index.html
@@ -827,6 +827,7 @@
             }
 
             nav {
+                height: 15vh;
                 padding: 10px;
                 align-items: center;
             }
@@ -892,10 +893,12 @@
             /* Page 1 */
             .section-1{
                 background-size:cover;
+                height: 70vh;
             }
 
             .section-1 h1 {
                 font-size: 3rem;
+                margin-top: 5vh;
             }
 
             .section-1 h3 {
@@ -905,11 +908,17 @@
             .section-2{
                 flex-direction: column;
                 height: auto;
+                padding-top: 3vh;
                 padding-bottom: 3vh;
             }
 
             .section-2 h2{
                 font-size:3rem;
+                margin-bottom: 0;
+            }
+
+            .h2-style{
+                margin-bottom: 1vh;
             }
 
             .section-2-img-div{   
@@ -936,6 +945,7 @@
 
             .section-3{
                 height: auto;
+                padding-top: 4vh;
             }
 
             .section-3 .content {
@@ -952,7 +962,7 @@
             }
 
             .section-3 .contact-us-div{
-                padding: 10vh 0;
+                padding: 7vh 0;
             }
 
             .button{
@@ -962,13 +972,23 @@
                 margin: 3vh 0;
             }
 
+            .contact-us-title{
+                display:flex;
+                width:100%;
+                padding-bottom: 0;
+                justify-content: center;
+            }
+
             .contact-us-title h2{
-                font-size: 2.3rem;
+                font-size: 2.2rem;
+                width: 95%;
             }
 
             /* Page 2 */
             .p2-section-1{
                 height: auto;
+                padding-top: 5vh;
+                padding-bottom: 3vh;
             } 
 
             .p2-section-1 h2{
@@ -991,12 +1011,12 @@
 
             .p2-section-1-text{
                 width: 90%;
-                padding: 2vh;
+                padding: 2vh 0;
             }
 
             .p2-section-1 img{
-                padding: 3vh 0;
-                width: 90%;
+                padding: 1vh 0;
+                width: 100%;
                 height: auto;
             }
 
@@ -1021,7 +1041,7 @@
             .p2-section-2 {
                 background-image: none;
                 height: auto;
-                padding: 5vh 0vh;
+                padding: 0vh 0vh;
                 background-color: #031e4d;
             }
 
@@ -1032,8 +1052,8 @@
                 height: auto;
                 background: url('assets/image_7.jpg') no-repeat center;
                 background-size: contain;
-                background-size: 175%;
-                background-position: -10% center;
+                background-size: 185%;
+                background-position: 0 center;
                 min-height: 45vh;
             }
 
@@ -1054,11 +1074,11 @@
             .ipo-title{
                 text-align: center;
                 font-size: 3rem;
-                padding-top:3vh;
             }
 
             .ipo-description{
                 text-align:justify;
+                padding-bottom:2vh;
             }
 
             .services-title{
@@ -1089,11 +1109,13 @@
                 padding: 2vh;
                 align-items: center;
                 justify-content: center;
+                margin-top: 0;
             }
 
             .call-to-action h2{
                 text-align: center;
                 font-size:2rem;
+                margin-bottom: 2vh;
             }
 
             /* Page 3 */
@@ -1116,6 +1138,23 @@
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
+                margin-top: 0;
+            }
+
+            .p3-section-1-img{
+                width:90%;
+            }
+
+            .p3-section-1-text{
+                width: 90%;
+                padding: 3vh 0;
+            }
+
+            .p3-section-1-text p{
+                text-align: justify;
+                text-justify: inter-word;
+                padding-right: 0;
+                font-size:1.2rem;
             }
 
             .p3-section-2 {
@@ -1129,8 +1168,9 @@
             .section-text{
                 width: 100%;
                 padding-top:2vh;
-                font-size: 1.5rem;
+                padding-left: 0;
                 text-align: center;
+                font-size: 1.8rem;
             }
 
             .text-div-container{
@@ -1144,8 +1184,8 @@
                 height: auto;
                 background-image: url('assets/image_10.jpg');
                 background-size: contain;
-                background-size: 200%;
-                background-position: 95% center;
+                background-size: 270%;
+                background-position: 87% center;
                 background-repeat: no-repeat;
                 min-height: 45vh;
             }
@@ -1159,8 +1199,7 @@
             }
 
             .p3-section-1-text{
-                width: 100%;
-                padding: 5vh;
+                width: 90%;
             }
 
             .p3-section-1-text p{
@@ -1287,7 +1326,7 @@
             }
 
             .section-2-img-div{
-                width: 95%;
+                width: 100%;
             }
 
             .section-2-img-div img{
@@ -1528,10 +1567,14 @@
                 height: auto;
                 background-image: url('assets/image_10.jpg');
                 background-size: contain;
-                background-size: 200%;
-                background-position: 95% center;
+                background-size: 270%;
+                background-position: 87% center;
                 background-repeat: no-repeat;
                 min-height: 45vh;
+            }
+
+            .team-title {
+                padding-top: 3vh;
             }
 
             .p3-section-1-img{
