--- a/fr.html
+++ b/fr.html
@@ -312,7 +312,7 @@
 
         /* Page 2 styles */
         .p2-section-1{
-            background-color: #f1f4fb;
+            background-color: #c7d0d5;
             color: #202529;
             height: auto;
             padding-top: 7vh;
@@ -492,7 +492,7 @@
         /* Page 3 */
 
         .p3-section-1{
-            background-color: #f1f4fb;
+            background-color:  #c7d0d5;
             color: #202529;
             height: auto;
             padding-top: 7vh;
